# my_wallpaper_engine

./: .clang-tidy  .gitignore  README.md  meson.build  planning.md
include/common/: config.h  ipc.h  plugin.h
include/daemon/: hyprland_ipc.h  mpv_render.h  plugin_manager.h  render.h  server_ipc.h
src/common/: config.c
src/daemon/: hyprland_ipc.c  main.c  mpv_render.c  plugin_manager.c  render.c  server_ipc.c  stb_image_impl.c
src/plugins/: analog_clock.c  calendar.c  sample_gtk_widget.c
src/scripts/: gcal_fetcher.py
src/tui/: main.c
